--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.1",
+    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
+    "firebase": "^8.6.2",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.0",
     "moment": "^2.29.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -36,14 +39,12 @@
     "react-test-renderer": "^17.0.2",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "uuid": "^3.4.0",
     "validator": "^13.5.2",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
