--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,6 +44,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "uuid": "^3.4.0",
     "validator": "^13.5.2",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
