--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv-webpack": "^7.0.2",
     "express": "^4.17.1",
     "firebase": "^8.6.2",
+    "history": "^4.10.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.5.0",
     "moment": "^2.29.1",
@@ -36,6 +37,7 @@
     "react-modal": "^3.12.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.0.5",
