--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "uuid": "^3.4.0",
     "validator": "^13.5.2",
     "webpack": "^5.37.1",
